syntax = "proto3";

package drivers;

service DriversService {
  rpc GetAllDrivers (Empty) returns (DriversResponse);
  rpc GetDriverById (DriverByIdRequest) returns (DriverResponse);
  rpc CreateDriver (CreateDriverRequest) returns (DriverResponse);
  rpc UpdateDriver (UpdateDriverRequest) returns (DriverResponse);
  rpc DeleteDriver (DriverByIdRequest) returns (DriverResponse);
}

message Empty {}

message DriverByIdRequest {
  string id = 1;
}

message CreateDriverRequest {
  string name = 1;
  string license = 2;
}

message UpdateDriverRequest {
  string id = 1;
  string name = 2;
  string license = 3;
}

message DriverResponse {
  string id = 1;
  string name = 2;
  string license = 3;
  string message = 4;
}

message DriversResponse {
  repeated DriverResponse drivers = 1;
}
